--- a/index.html
+++ b/index.html
@@ -118,21 +118,47 @@
       cursor: pointer;
       animation: pulse 2s infinite;
     }
+    .background-chaos {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: url('https://media.giphy.com/media/l0ExdMHUDKteztyfe/giphy.gif') center center / cover no-repeat;
+      opacity: 0.08;
+      pointer-events: none;
+      z-index: 0;
+      mix-blend-mode: screen;
+    }
+    .chaos-text {
+      position: absolute;
+      top: 10vh;
+      left: 0;
+      width: 100%;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #888;
+      opacity: 0.3;
+      pointer-events: none;
+      user-select: none;
+    }
   </style>
 </head>
 <body>
   <div class="overlay" id="unlockOverlay">👁️‍🗨️ TAP TO UNLOCK</div>
+  <div class="background-chaos"></div>
 
   <h1 class="glitch" data-text="I'M FILMING SOMEONE WITHOUT ASKING!">I'M FILMING SOMEONE WITHOUT ASKING!</h1>
   <p class="redacted">[ACCESSING UNAUTHORIZED SURVEILLANCE NODE] ...
     <br />REDACTED :: REDACTED :: RECORDING :: REDACTED</p>
   <p class="redacted">DRM DETECTED / TRACKING INITIATED / IDENTITY CORRUPTED</p>
+  <div class="chaos-text">nuclear baby nuclear baby nuclear baby nuclear baby</div>
   <div class="end-tagline">
     <p>Don't Record Me. Ever. <a href="https://drm.world">→ RETURN TO DRM</a></p>
   </div>
 
   <audio id="chaosAudio" preload="auto">
-    <source src="https://DRM2411.github.io/DRM-Chaos/175431217266330563n3esz5h-voicemaker.in-speech (1).mp3" type="audio/mpeg">
+    <source src="https://DRM2411.github.io/DRM-Chaos/drm_chaos_screech.mp3" type="audio/mpeg">
   </audio>
 
   <script>
